<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.folio</groupId>
  <artifactId>folio-integration-tests</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>

  <name>Folio integration tests</name>

  <organization>
    <name>The Open Library Foundation</name>
    <url>https://dev.folio.org</url>
  </organization>

  <licenses>
    <license>
      <name>Apache License 2.0</name>
      <url>https://spdx.org/licenses/Apache-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <cucumber.reporting.version>5.7.0</cucumber.reporting.version>
    <maven.surefire.version>2.22.2</maven.surefire.version>
    <karate.junit.version>1.0.1</karate.junit.version>
    <junit.version>5.6.0</junit.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <spring.version>5.3.19</spring.version>
    <testrail-api-java-client.version>2.0.1</testrail-api-java-client.version>
  </properties>

  <modules>
    <module>common</module>
    <module>acquisitions</module>
    <module>mod-ldp</module>
    <module>mod-oai-pmh</module>
    <module>poc</module>
    <module>mod-quick-marc</module>
    <module>data-import</module>
    <module>mod-data-export</module>
    <module>testrail-integration</module>
    <module>edge-dematic</module>
    <module>mod-feesfines</module>
    <module>mod-patron-blocks</module>
    <module>mod-email</module>
    <module>mod-user-import</module>
    <module>mod-calendar</module>
    <module>mod-event-config</module>
    <module>mod-notify</module>
    <module>mod-sender</module>
    <module>mod-template-engine</module>
    <module>mod-search</module>
    <module>mod-login-saml</module>
    <module>edge-caiasoft</module>
    <module>mod-audit</module>
    <module>mod-bulk-edit</module>
    <module>mod-source-record-storage</module>
    <module>mod-notes</module>
    <module>mod-kb-ebsco-java</module>
    <module>mod-data-import-converter-storage</module>
    <module>mod-source-record-manager</module>
    <module>mod-password-validator</module>
    <module>mod-users-bl</module>
    <module>mod-permissions</module>
    <module>mod-tags</module>
    <module>mod-codex-ekb</module>
    <module>mod-inventory</module>
    <module>mod-users</module>
    <module>mod-circulation</module>
    <module>edge-patron</module>
    <module>edge-rtac</module>
    <module>mod-inn-reach</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire.version}</version>
        <configuration>
          <testFailureIgnore>true</testFailureIgnore>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.intuit.karate</groupId>
      <artifactId>karate-junit5</artifactId>
      <version>${karate.junit.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.2.3</version>
    </dependency>
  </dependencies>
</project>
